--- a/news/authors.yml
+++ b/news/authors.yml
@@ -2,4 +2,4 @@ adam:
   name: Adam
   title: Whisky Wizard
   url: https://github.com/adamhathcock
-  email: adam@hathcock.uk
+  email: adam@steeldram.com
